--- a/index.html
+++ b/index.html
@@ -72,15 +72,21 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -108,7 +114,9 @@
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -146,7 +154,9 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title text-yellow secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title text-yellow secondary-border">Reach Out</h2>
+            </div>    
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.9454179465212!2d-77.11046898291264!3d38.8794007125521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b5a48f897383%3A0x4e27a643118b4367!2sVIDA%20Fitness%20Ballston!5e0!3m2!1sen!2sus!4v1622832228301!5m2!1sen!2sus"
                 style="border:0;" 
