--- a/index.html
+++ b/index.html
@@ -188,11 +188,21 @@
                 <h2 class="section-title text-yellow secondary-border">Reach Out</h2>
             </div>    
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.9454179465212!2d-77.11046898291264!3d38.8794007125521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b5a48f897383%3A0x4e27a643118b4367!2sVIDA%20Fitness%20Ballston!5e0!3m2!1sen!2sus!4v1622832228301!5m2!1sen!2sus"
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy">
-                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Va <br/>
+                        12345 <br />
+                        P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
                 <div class="contact-form">
                     <h3>Contact Us</h3>
                     <form>
@@ -205,21 +215,11 @@
                        <button type="submit">Submit</button>
                       </form>
                 </div>
-                <div>
-                    <h3 class="text-yellow text-margin">Run Buddy</h3>
-                    <p class="text-margin">
-                        Any questions or concerns before signing up?
-                        <br />
-                        Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
-                        55 Main Street <br/>
-                        Some Town, Va <br/>
-                        12345<br />
-                        P: 555.RUN.BUDZ (555.786.2839)<br/>
-                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                    </address>
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.9454179465212!2d-77.11046898291264!3d38.8794007125521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b5a48f897383%3A0x4e27a643118b4367!2sVIDA%20Fitness%20Ballston!5e0!3m2!1sen!2sus!4v1622832228301!5m2!1sen!2sus"
+                frameborder="0"
+                style="border:0;" 
+                allowfullscreen>
+                </iframe>
             </div>
         </section>
 
